--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
   <!-- Fonts -->
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
+  <link href="http://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700" rel="stylesheet" >
   <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Protest+Strike&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Protest+Strike&display=swap" rel="stylesheet">
 </head>
 
 <body>
